refactor : 예약 응답 형식 분리